# simple-background-tasks

./: .gitignore  .pre-commit-config.yaml  README.md  backgroundtask.py  main.py  pyproject.toml
examples/: fastapi_background_tasks.py  tasks.py
examples/console_daemon/: main.py
examples/fastapi_background_tasks/: main.py
simple_background_tasks/: __init__.py  backgroundtask.py
tasks/: check_weather.py  print_hello.py
