[tool.poetry]
name = "simple-background-tasks"
version = "0.1.0"
description = "Run simple scheduled tasks using AsyncIO"
authors = ["Martin Morset <mmorset@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "simple_background_tasks"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
requests = "^2.28.1"
fastapi = "^0.82.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
pre-commit = "^2.20.0"
types-requests = "^2.28.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
pretty = true
warn_unused_ignores = true
warn_return_any = true

[tool.pydocstyle]
convention = "google"
add-ignore = "D100,D104,D101"